@@ -3,6 +3,8 @@
 SVN
 -feature#0001550: Record the polling time for each host to optimize polling times
 -feature: Implement new file based datetime format in the spine log function
+-feature: Add a reconnect capability when the server goes away
+
 
 0.8.7h
 -feature#0001852: Another 10% speedup in spine 
